--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ env:
   ECR_REPOSITORY: demo-ecr2 # Amazon ECR repository name
   ECS_SERVICE: demo-task-service         # Amazon ECS service name
   ECS_CLUSTER: demo-cluster1          # Amazon ECS cluster name
-  ECS_TASK_DEFINITION: task.def-json # Path to task definition file
+  ECS_TASK_DEFINITION: task-def.json # Path to task definition file
   CONTAINER_NAME: demo-container           # Container name in task definition
 
 permissions:
